# dspone

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  changelog
cmake/: FindSNDFILE.cmake  FindWIPP.cmake
doc/: dspone.dox
doc/html/: annotated.html  annotated.js  classes.html  dir_000001_000005.html  dir_000005_000002.html  dir_000005_000003.html  dir_000007_000000.html  dir_000008_000000.html  dir_000009_000000.html  dir_000010_000000.html  dir_000011_000000.html  dir_000012_000000.html  dir_0afa9a1668b6e0ab6cd11e195cac803d.html  dir_0afa9a1668b6e0ab6cd11e195cac803d.js  dir_0afa9a1668b6e0ab6cd11e195cac803d_dep.map  dir_0afa9a1668b6e0ab6cd11e195cac803d_dep.md5  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_2545b425c6bd217e4f9b00ab9423b74a.html  dir_2545b425c6bd217e4f9b00ab9423b74a.js  dir_2545b425c6bd217e4f9b00ab9423b74a_dep.map  dir_2545b425c6bd217e4f9b00ab9423b74a_dep.md5  dir_3f9ff564b61ab5eef0f4ed252128c5c3.html  dir_3f9ff564b61ab5eef0f4ed252128c5c3.js  dir_3f9ff564b61ab5eef0f4ed252128c5c3_dep.map  dir_3f9ff564b61ab5eef0f4ed252128c5c3_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6ef7a608ad7ec8e12ec4ed1af023e3d7.html  dir_6ef7a608ad7ec8e12ec4ed1af023e3d7.js  dir_6ef7a608ad7ec8e12ec4ed1af023e3d7_dep.map  dir_6ef7a608ad7ec8e12ec4ed1af023e3d7_dep.md5  dir_78c1e64369c44d608fbaee7b2f3229df.html  dir_78c1e64369c44d608fbaee7b2f3229df.js  dir_78c1e64369c44d608fbaee7b2f3229df_dep.map  dir_78c1e64369c44d608fbaee7b2f3229df_dep.md5  (+138 more)
doc/html/d0/d0a/: fftImpl_8cpp.html
doc/html/d0/d17/: BandPassFilter_8h__dep__incl.map  BandPassFilter_8h__dep__incl.md5  Filters_8cpp.html
doc/html/d0/d1e/: FilterBankFFTW_8h__dep__incl.map  FilterBankFFTW_8h__dep__incl.md5
doc/html/d0/d23/: structdsp_1_1Complex64f.html  (+1 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+65 more)
include/dspone/: #BandPassFFTWFilter.h#  BandPassFFTWFilter.h  BandPassFFTWFilterImpl.h  BandPassFIRFilter.h  BandPassFilter.h  BasicFilterModules.h  DspException.h  FFTWeightingFilter.h  FIRFilter.h  Filter.h  FilterBank.h  FilterBankFFTW.h  FilterBankFIR.h  FilterBankMelScale.h  FilterProcess.h  FilterProcess.inl  IIRFilter.h  IParticleFilter.h  NotchFilter.h  ParticleFilter.h  ParticleFilter.inl  ParticleFilterImpl.h  ParticleFilterImpl.inl  PreEmphasisFilter.h  ShortTimeProcess.inl  SignalProcessor.h  TimeProcess.h  complex.h  dsp.h  dspHelpers.h  dspMath.h  dspMathImpl.hpp  dspdefs.h  dsplogger.h  dsploggerImpl.h  fft.h  gralCrossCorrelation.h  stft.h
include/dspone/algorithm/: fft.h  fftImpl.h  gralCrossCorrelation.h  gralCrossCorrelationImpl.h  signalPower.h
include/dspone/filter/: BandPassFFTWFilter.h  BandPassFFTWFilterImpl.h  BandPassFIRFilter.h  BandPassFilter.h  FFTWeightingFilter.h  FIRFilter.h  Filter.h  FilterBank.h  FilterBankFFTW.h  FilterBankFIR.h  FilterBankMelScale.h  IIRFilter.h  MedianFilter.h  MedianFilterImpl.h  NotchFilter.h  PreEmphasisFilter.h
include/dspone/pf/: IObservationModel.h  IParticleFilterCallback.h  IParticleSet.h  IPredictionModel.h  IResamplingModel.h  ObservationModel.hpp  ParticleFilter.hpp  ParticleSet.hpp  PredictionModel.hpp  ResamplingModel.hpp
include/dspone/plot/: dspgui.h  dspplotGnuplot.h  dspplotQwt.h  qtDebug.h
include/dspone/rt/: AnalysisDispatcher.h  DummyShortTimeFourier.h  DummyShortTimeProcess.h  DummyTimeProcess.h  FilterProcess.h  FilterProcess.hpp  FilterProcess.inl  Filters.h  ProcessDispatcher.h  STFTImpl.h  ShortTimeAnalysis.h  ShortTimeAnalysisImpl.hpp  ShortTimeFourierAnalysis.h  ShortTimeFourierSubBand.h  ShortTimeFourierSubBandImpl.h  ShortTimeFourierTransform.h  ShortTimeProcess.h  ShortTimeProcess.inl  ShortTimeProcessImpl.h  ShortTimeProcessImpl.inl  SignalAnalyser.h  SignalProcessingDispatcher.h  SignalProcessor.h  TimeProcess.h  stft.h
src/dspone/: BandPassFFTWFilter.cpp  BandPassFFTWFilterImpl.cpp  BandPassFIRFilter.cpp  BandPassFilter.cpp  BasicFilterModules.cpp  DspException.cpp  FFTWeightingFilter.cpp  FIRFilter.cpp  Filter.cpp  FilterBank.cpp  FilterBankFFTW.cpp  FilterBankFIR.cpp  FilterBankMelScale.cpp  FilterProcess.cpp  Filters.cpp  IIRFilter.cpp  NotchFilter.cpp  ParticleFilter.cpp  PreEmphasisFilter.cpp  ShortTimeProcess.cpp  SignalProcessor.cpp  TimeProcess.cpp  dspHelpers.cpp  dspMath.cpp  dsplogger.cpp  fft.cpp  fftImpl.cpp  fftImpl.h  gralCrossCorrelation.cpp  gralCrossCorrelationImpl.cpp  stft.cpp
src/dspone/algorithm/: fft.cpp  fftImpl.cpp  fftImpl.h  gralCrossCorrelation.cpp  gralCrossCorrelationImpl.cpp  signalPower.cpp
src/dspone/filter/: BandPassFFTWFilter.cpp  BandPassFFTWFilterImpl.cpp  BandPassFIRFilter.cpp  FFTWeightingFilter.cpp  FIRFilter.cpp  FilterBank.cpp  FilterBankFFTW.cpp  FilterBankFIR.cpp  FilterBankMelScale.cpp  FilterProcess.cpp  IIRFilter.cpp  MedianFilter.cpp  MedianFilterImpl.cpp  PreEmphasisFilter.cpp
src/dspone/pf/: IObservationModel.cpp  IPredictionModel.cpp  IResamplingModel.cpp  ParticleFilter.cpp
src/dspone/plot/: dspgui.cpp  dspplotQwt.cpp  qtDebug.cpp
src/dspone/rt/: DummyShortTimeFourier.cpp  DummyShortTimeProcess.cpp  STFTImpl.cpp  ShortTimeAnalysis.cpp  ShortTimeAnalysisImpl.cpp  ShortTimeFourierAnalysis.cpp  ShortTimeFourierSubBand.cpp  ShortTimeFourierSubBandImpl.cpp  ShortTimeFourierTransform.cpp  ShortTimeProcess.cpp  ShortTimeProcessImpl.cpp  SignalProcessor.cpp  stft.cpp
test/: test_dspgui.cpp  test_dspone.cpp
test/audiofiles/: music16000Hz.raw
(+863 files in other folders)
